--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<h1>HOME</h1>
+
+<button mat-flat-button
+        color="warn"
+        (click)="logout()">
+  <i class="fas fa-power-off"></i>
+</button>
